crates/toml_edit/tests/snapshots/invalid/table/duplicate-key-03.stderr
TOML parse error at line 4, column 9
  |
4 | [[fruit.apple]]
  |         ^^^^^
duplicate key
